--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "files.readonlyInclude": {
     "**/routeTree.gen.ts": true
   },
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "npm.packageManager": "pnpm"
 }
