--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "**/routeTree.gen.ts": true
   },
   "editor.tabSize": 2,
-  "npm.packageManager": "pnpm"
+  "npm.packageManager": "pnpm",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
